@@ -1,4 +1,5 @@
 0.14
+ - Add tests for bad and explicit parameter 'tags' values.
  - Pass $env variable to _css(), _tags_middle() and _cleanup() methods.
 
 0.13 2023-05-29T16:49:03+02:00
